--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,14 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "strict": true,
-    "sourceMap": true,
-    "outDir": "build",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*"],
-      "device": ["src/device"]
-    }
-  },
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "strict": true,
+        "sourceMap": true,
+        "outDir": "build",
+        "baseUrl": ".",
+        "paths": {
+            "*": ["node_modules/*"],
+            "device": ["src/device/device"]
+        }
+    },
+    "include": ["src"]
 }
