--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,15 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+    - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+    vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    - displayName: 'build'
+      script: |
+          yarn install
+          yarn nativeRebuild
+          yarn build
+          yarn lint
