--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
         "build": "tsc -p .",
         "watch": "tsc -w -p .",
         "lint": "tslint --project .",
-        "start": "npm run build && electron ./build/main.js"
+        "start": "npm run build && electron ./build/main.js",
+        "nativeRebuild": "electron-rebuild"
     },
     "author": "GitHub",
     "license": "BSD-3-Clause",
     "devDependencies": {
+        "@types/serialport": "^7.0.3",
         "electron": "^5.0.5",
+        "electron-rebuild": "^1.8.5",
         "husky": "^2.4.1",
         "prettier": "1.18.2",
         "pretty-quick": "^1.11.1",
