--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "baseUrl": ".",
         "paths": {
             "*": ["node_modules/*"],
-            "device": ["src/device/device"]
+            "device": ["src/device/device"],
+            "connection/*": ["src/connection/*"]
         }
     },
     "include": ["src"]
