--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "GitHub",
     "license": "BSD-3-Clause",
     "devDependencies": {
+        "@types/node": "^12.0.10",
         "@types/serialport": "^7.0.3",
         "electron": "^5.0.5",
         "electron-rebuild": "^1.8.5",
