--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
         "module": "commonjs",
         "strict": true,
         "sourceMap": true,
+        "incremental": true,
         "outDir": "build",
         "baseUrl": ".",
         "paths": {
-            "*": ["node_modules/*"],
-            "device": ["src/device/device"],
-            "connection/*": ["src/connection/*"]
+            "*": ["node_modules/*", "src/*"]
         }
     },
     "include": ["src"]
