--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
     - displayName: 'build'
       script: |
-          yarn install
-          yarn nativeRebuild
-          yarn build
-          yarn lint
+          npm install install
+          npm run nativeRebuild
+          npm run build
+          npm run lint
